objects/Account.object
<CustomObject>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <label>Billing Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>ClientNumber__c</fullName>
        <externalId>true</externalId>
        <label>Client #</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContactsSpecialty__c</fullName>
        <label>Contacts Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationType__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Volunteer Organizations</fullName>
                </value>
                <value>
                    <fullName>Board Members</fullName>
                </value>
                <value>
                    <fullName>Government Agencies</fullName>
                </value>
                <value>
                    <fullName>Real Estate Companies</fullName>
                </value>
                <value>
                    <fullName>Banks &amp; Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Property service related organizations</fullName>
                </value>
                <value>
                    <fullName>Property legal service firms</fullName>
                </value>
                <value>
                    <fullName>Closing Companies</fullName>
                </value>
                <value>
                    <fullName>203K Consultants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Referral_Organization_Agency__c</fullName>
        <label>Type of Referral Organization/Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homeowner’s Insurance Agent</fullName>
                </value>
                <value>
                    <fullName>Debt Management Program</fullName>
                </value>
                <value>
                    <fullName>Behavioral Counseling</fullName>
                </value>
                <value>
                    <fullName>Credit Counseling</fullName>
                </value>
                <value>
                    <fullName>Emergency Shelter</fullName>
                </value>
                <value>
                    <fullName>Social Service Agency</fullName>
                </value>
                <value>
                    <fullName>Mortgage Originator</fullName>
                </value>
                <value>
                    <fullName>Real Estate Agent</fullName>
                </value>
                <value>
                    <fullName>Home Inspector</fullName>
                </value>
                <value>
                    <fullName>Attorney/Closing Agent</fullName>
                </value>
                <value>
                    <fullName>Tax Consultant</fullName>
                </value>
                <value>
                    <fullName>Financial Institute Representative</fullName>
                </value>
                <value>
                    <fullName>Government Affiliate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__CreatedBySumo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By SUMO</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ClientNumber__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Type_of_Referral_Organization_Agency__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Households</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>